--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 						<ul>
 							<li><a href="https://www.facebook.com/FGDurianfarm" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="https://www.instagram.com/fookgordurian/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							<li><a href="https://www.youtube.com/results?search_query=fook+gor+durian+farm" target="_blank"><i class="fab fa-dribbble" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+							<li><a href="https://www.youtube.com/results?search_query=fook+gor+durian+farm" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 						</ul>
 					</div>
 				</div>
