--- a/single-product.html
+++ b/single-product.html
@@ -151,9 +151,9 @@
 				</div>
 				<div class="col-md-7">
 					<div class="single-product-content">
-						<h3>Green apples have polyphenols</h3>
-						<p class="single-product-pricing"><span>Per Kg</span> $50</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint dignissimos, rem commodi cum voluptatem quae reprehenderit repudiandae ea tempora incidunt ipsa, quisquam animi perferendis eos eum modi! Tempora, earum.</p>
+						<h3>Musang King</h3>
+						<p class="single-product-pricing"><span>Per Kg</span> RM65</p>
+						<p>D197 Musang King is a popular durian with an oval or egg-shaped shape and a lighter green husk that is possibly the most consumed. Grown on 30-year-old trees, Musang King is best cultivated in Pahang due to its ideal soil. The dry flesh has an aromatic aftertaste and a bittersweet flavor due to the climate and hilly terrain.</p>
 						<div class="single-product-form">
 							<form action="index.html">
 								<input type="number" placeholder="0">
@@ -182,7 +182,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Related</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<!--p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p-->
 					</div>
 				</div>
 			</div>
