--- a/single-product.html
+++ b/single-product.html
@@ -202,7 +202,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Black Torn</h3>
+						<h3>Black Thorn</h3>
 						<p class="product-price"><span>Per Kg</span> RM75 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
