--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-1"></div>
-						<h4>Chan Lai Fook <span>Owner/Farmer</span></h4>
+						<h4>Chan Loy Fooh <span>Owner/Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
