--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 								<img src="assets/img/avaters/avatar1.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Chan Lai Fook <span>Owner</span></h3>
+								<h3>Chan Loy Fooh <span>Owner</span></h3>
 								<p class="testimonial-body">
 									" Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma. Our commitment to quality is unwavering. We understand that the true essence of a Pahang durian lies in its flavor, aroma, and freshness. "
 								</p>
