--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar3.png" alt="">
+								<img src="assets/img/avaters/C:\Users\Asus\Documents\GitHub\tankarhooi.github.io\assets\img\avaters\WeChat Image_20231129002223.jpg"alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Chan Yao Joe <span>Owner</span></h3>
