--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						</div>
 						<div class="content">
 							<h3>Refund</h3>
-							<p>Get refund within 3 days!</p>
+							<p>Get refund within 3 days! T&C</p>
 						</div>
 					</div>
 				</div>
