--- a/shop.html
+++ b/shop.html
@@ -163,7 +163,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
 						</div>
-						<h3>Fresh Durian</h3>
+						<h3>Musang King</h3>
 						<p class="product-price"><span>Per Kg</span> RM65 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
@@ -173,7 +173,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Packed Durian</h3>
+						<h3>Packed MSK Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
@@ -183,7 +183,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
 						</div>
-						<h3>Durian Paste</h3>
+						<h3>MSK Durian Paste</h3>
 						<p class="product-price"><span>Per Kg</span> RM 95 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
