--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG"alt=""></a>
 						</div>
-						<h3>Packed MK Durian</h3>
+						<h3>Packed MSK Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
@@ -227,7 +227,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/durian paste.JPG" alt=""></a>
 						</div>
-						<h3>MK Durian Paste</h3>
+						<h3>MSK Durian Paste</h3>
 						<p class="product-price"><span>Per Kg</span> RM95 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
