--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@
 				<div class="col-lg-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
-							<img src="assets/img/company-logos/1.png" alt="">
+							<img src="assets/img/company-logos/1.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
-							<img src="assets/img/company-logos/2.png" alt="">
+							<img src="assets/img/company-logos/2.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
 							<img src="assets/img/company-logos/3.png" alt="">
