updates customer pic

--- a/index.html
+++ b/index.html
@@ -436,13 +436,13 @@
 							<img src="assets/img/company-logos/2.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
-							<img src="assets/img/company-logos/3.png" alt="">
+							<img src="assets/img/company-logos/3.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
-							<img src="assets/img/company-logos/4.png" alt="">
+							<img src="assets/img/company-logos/4.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
-							<img src="assets/img/company-logos/5.png" alt="">
+							<img src="assets/img/company-logos/5.jpg" alt="">
 						</div>
 					</div>
 				</div>
