--- a/shop.html
+++ b/shop.html
@@ -161,7 +161,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/C:\Users\Asus\Documents\GitHub\tankarhooi.github.io\assets\img\products\mk1.png"height=260 width=260 alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
 						</div>
 						<h3>Musang King</h3>
 						<p class="product-price"><span>Per Kg</span> RM65 </p>
