--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG"alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG" alt=""></a>
 						</div>
 						<h3>Packed MSK Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
@@ -347,7 +347,7 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner">
+	<section class="shop-banner" style="border: 1px solid black;">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
