--- a/cart.html
+++ b/cart.html
@@ -161,7 +161,7 @@
 								<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
-									<td class="product-name">Packed MSK Durian</td>
+									<td class="product-name">MSK Durian Packed</td>
 									<td class="product-price">RM85</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
