--- a/checkout.html
+++ b/checkout.html
@@ -222,7 +222,7 @@
 									<td>Total</td>
 								</tr>
 								<tr>
-									<td>Packed MSK Durian</td>
+									<td>MSK Durian Packed</td>
 									<td>RM85.00</td>
 								</tr>
 								<tr>
