--- a/shop.html
+++ b/shop.html
@@ -173,7 +173,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Packed MSK Durian</h3>
+						<h3>MSK Durian Packed</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
