--- a/shop.html
+++ b/shop.html
@@ -191,7 +191,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-4.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-4.png" alt=""></a>
 						</div>
 						<h3>Sultan King</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
@@ -201,7 +201,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-5.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-5.png" alt=""></a>
 						</div>
 						<h3>Black Thorn</h3>
 						<p class="product-price"><span>Per Kg</span> RM75 </p>
@@ -211,7 +211,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-6.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-6.png" alt=""></a>
 						</div>
 						<h3>Tekka</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
