--- a/shop.html
+++ b/shop.html
@@ -161,7 +161,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-1.png" alt=""></a>
 						</div>
 						<h3>Musang King</h3>
 						<p class="product-price"><span>Per Kg</span> RM65 </p>
@@ -173,7 +173,7 @@
 						<div class="product-image">
 							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
-						<h3>Packed MSK Durian</h3>
+						<h3>MSK Durian Packed</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
@@ -191,7 +191,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-4.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-4.png" alt=""></a>
 						</div>
 						<h3>Sultan King</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
@@ -201,7 +201,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-5.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-5.png" alt=""></a>
 						</div>
 						<h3>Black Thorn</h3>
 						<p class="product-price"><span>Per Kg</span> RM75 </p>
@@ -211,7 +211,7 @@
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-6.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-6.png" alt=""></a>
 						</div>
 						<h3>Tekka</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
