--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner" style="border: 1px solid black;">
+	<section class="shop-banner">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
@@ -355,7 +355,7 @@
                </div>
             <img src="assets/img/a.jpg" alt="">
         </div>
-    </section>
+    <!--/section-->
 	<!-- end shop banner -->
 	<!-- latest news -->
 	<!--div class="latest-news pt-150 pb-150">
