--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
                </div>
             <img src="assets/img/a.jpg" alt="">
-        </div>
-    <!--/section-->
+        <!--/div>
+    </section-->
 	<!-- end shop banner -->
 	<!-- latest news -->
 	<!--div class="latest-news pt-150 pb-150">
