--- a/single-product.html
+++ b/single-product.html
@@ -190,7 +190,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-4.png" alt=""></a>
 						</div>
 						<h3>Sultan King</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
@@ -200,7 +200,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-5.png" alt=""></a>
 						</div>
 						<h3>Black Thorn</h3>
 						<p class="product-price"><span>Per Kg</span> RM75 </p>
@@ -210,7 +210,7 @@
 				<div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product-img-6.png" alt=""></a>
 						</div>
 						<h3>Tekka</h3>
 						<p class="product-price"><span>Per Kg</span> RM45 </p>
