--- a/single-product.html
+++ b/single-product.html
@@ -146,7 +146,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<div class="single-product-img">
-						<img src="assets/img/products/product-img-5.jpg" alt="">
+						<img src="assets/img/products/product-img-1.png" alt="">
 					</div>
 				</div>
 				<div class="col-md-7">
