--- a/cart.html
+++ b/cart.html
@@ -160,7 +160,7 @@
 							<tbody>
 								<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
+									<td class="product-image"><img src="assets/img/products/product-img-2.jpg" alt=""></td>
 									<td class="product-name">MSK Durian Packed</td>
 									<td class="product-price">RM85</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
@@ -168,7 +168,7 @@
 								</tr>
 								<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="assets/img/products/product-img-2.jpg" alt=""></td>
+									<td class="product-image"><img src="assets/img/products/product-img-1.png" alt=""></td>
 									<td class="product-name">Musang King</td>
 									<td class="product-price">RM65</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
@@ -176,7 +176,7 @@
 								</tr>
 								<tr class="table-body-row">
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="assets/img/products/product-img-3.jpg" alt=""></td>
+									<td class="product-image"><img src="assets/img/products/product-img-4.png" alt=""></td>
 									<td class="product-name">Sultan King</td>
 									<td class="product-price">RM45</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
