--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 </span>
                             </div>
                         </div>
-                    	<img src="assets/img/a.jpg" alt="">
+                    	<img src="assets/img/a.png" alt="">
                     </div>
                 </div>
                 <!--Content Column-->
@@ -353,7 +353,7 @@
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
                </div>
-            <img src="assets/img/a.jpg" alt="">
+            <img src="assets/img/b.png" alt="">
         </div>
     <!--/section-->
 	<!-- end shop banner -->
