--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					<div class="testimonial-sliders">
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar1.png" alt="">
+								<img src="assets/img/avaters/avatar1.jpg" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Chan Loy Fooh <span>Owner</span></h3>
@@ -290,7 +290,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar2.png" alt="">
+								<img src="assets/img/avaters/avatar2.jpg" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Michael Chan <span>Owner</span></h3>
@@ -304,7 +304,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar3.png" alt="">
+								<img src="assets/img/avaters/avatar3.jpg" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Chan Yao Joe <span>Owner</span></h3>
