--- a/about.html
+++ b/about.html
@@ -207,6 +207,7 @@
             <div class="sale-percent"><span>Sale! <br> Upto</span>50% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
         </div>
+        <img src="assets/img/b.png" alt="">
     </section>
 	<!-- end shop banner -->
 
