--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
 	<!-- end breadcrumb section -->
 
 	<!-- featured section -->
-	<div class="feature-bg">
+	<div class="feature-bg"><img src="assets/img/feature-bg.png" alt=""></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
