--- a/about.html
+++ b/about.html
@@ -141,8 +141,8 @@
 	<!-- end breadcrumb section -->
 
 	<!-- featured section -->
-	<div class="feature-bg"><img src="assets/img/feature-bg.png" alt="">
-		<div class="container">
+	<div class="feature-bg">
+			<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="featured-text">
