--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar2.jpg" alt="">
+								<img src="assets/img/avaters/avatar2.jpeg" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Michael Chan <span>Owner</span></h3>
@@ -347,7 +347,7 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner">
+	<section class="shop-banner" style="background-image:url('assets/img/b.jpg');">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
