--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 	<section class="shop-banner" style="background-image:url('assets/img/b.jpg');">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span class="white-text">off</span></div>
+            <div class="sale-percent"><span>Sale! <br> Up to</span>20% off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
                </div>
             <img src="assets/img/b.png" alt="">
