--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar2.jpeg" alt="">
+								<img src="assets/img/avaters/avatar2.jpg" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Michael Chan <span>Owner</span></h3>
