--- a/about.html
+++ b/about.html
@@ -150,6 +150,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
+								<img src="assets/img/feature-bg.jpg" alt="">
 									<div class="list-icon">
 										<i class="fas fa-shipping-fast"></i>
 									</div>
@@ -204,7 +205,7 @@
 	<section class="shop-banner">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Upto</span>20% <span>off</span></div>
+            <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
         </div>
         <img src="assets/img/b.png" alt="">
