--- a/index.html
+++ b/index.html
@@ -347,15 +347,14 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner" style="background-image:url('assets/img/b.jpg');">
+	<section class="shop-banner">
     	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
-               </div>
-            <img src="assets/img/b.png" alt="">
         </div>
-    <!--/section-->
+        <img src="assets/img/b.png" alt="">
+    </section>
 	<!-- end shop banner -->
 	<!-- latest news -->
 	<!--div class="latest-news pt-150 pb-150">
