--- a/about.html
+++ b/about.html
@@ -203,12 +203,12 @@
 
 	<!-- shop banner -->
 	<section class="shop-banner">
-    	<div class="container">
+    	<div class="container"style="background-image:url('assets/img/b.jpg.jpg');">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
         </div>
-        <img src="assets/img/b.png" alt="">
+        <!--img src="assets/img/b.png" alt=""-->
     </section>
 	<!-- end shop banner -->
 
