--- a/about.html
+++ b/about.html
@@ -149,8 +149,7 @@
 						<h2 class="pb-3">Why <span class="orange-text">Fook Gor Durian Farm</span></h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
-								<div class="list-box d-flex">
-								<img src="assets/img/feature-bg.jpg" alt="">
+								<div class="list-box d-flex"><img src="assets/img/feature-bg.jpg" alt="">
 									<div class="list-icon">
 										<i class="fas fa-shipping-fast"></i>
 									</div>
@@ -202,8 +201,8 @@
 	<!-- end featured section -->
 
 	<!-- shop banner -->
-	<section class="shop-banner">
-    	<div class="container"style="background-image:url('assets/img/b.jpg.jpg');">
+	<section class="shop-banner" style="background-image:url('assets/img/b.jpg.jpg');">
+    	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
