--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner">
-    	<div class="container" style="background-image:url('assets/img/b.jpg.jpg');">
+	<section class="shop-banner" style="background-image:url('assets/img/b.jpg.jpg');">
+    	<div class="container">
         	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
