--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
 						<h2 class="pb-3">Why <span class="orange-text">Fook Gor Durian Farm</span></h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
-								<div class="list-box d-flex"><img src="assets/img/feature-bg.jpg" alt="">
+								<div class="list-box d-flex">
 									<div class="list-icon">
 										<i class="fas fa-shipping-fast"></i>
 									</div>
@@ -170,14 +170,14 @@
 									</div>
 								</div>
 							</div>
-							<!--div class="col-lg-6 col-md-6 mb-5 mb-md-5">
+							<div class="col-lg-6 col-md-6 mb-5 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
 										<i class="fas fa-briefcase"></i>
 									</div>
 									<div class="content">
 										<h3>Custom Box</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>Crafted with robust materials and designed with a clever ventilation system, this box keeps the durian's pungent aroma at bay while safeguarding its spiky exterior.</p>
 									</div>
 								</div>
 							</div>
@@ -188,7 +188,7 @@
 									</div>
 									<div class="content">
 										<h3>Quick Refund</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p-->
+										<p>Get a hassle-free refund when your durian spoil.(T&C)</p>
 									</div>
 								</div>
 							</div>
@@ -207,7 +207,6 @@
             <div class="sale-percent"><span>Sale! <br> Up to</span>20% <span>off</span></div>
             <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
         </div>
-        <!--img src="assets/img/b.png" alt=""-->
     </section>
 	<!-- end shop banner -->
 
